Pose Mode: Clearing transform doesn't respect Mirror X #83657

Closed
opened 2020-12-11 14:17:50 +01:00 by Luciano Muñoz Sessarego · 21 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.51

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-09 01:29, hash: 9b11a7776f
Worked: (newest version of Blender that worked as expected)

Short description of error
When animating and posing with X mirror. One performs many actions and some of them don't transfer to the other side and they should, simple operations like: Resetting Transforms, Breakdowner,

Exact steps for others to reproduce the error
open rain rig from the cloud.
turn on x mirror
move a hand
both move.
now press alt r / g / s to get it back to its place,
the other hand doesnt respond.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.51 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-09 01:29, hash: `9b11a7776f` Worked: (newest version of Blender that worked as expected) **Short description of error** When animating and posing with X mirror. One performs many actions and some of them don't transfer to the other side and they should, simple operations like: Resetting Transforms, Breakdowner, **Exact steps for others to reproduce the error** open rain rig from the cloud. turn on x mirror move a hand both move. now press alt r / g / s to get it back to its place, the other hand doesnt respond.
Author
Member

Added subscriber: @LucianoMunoz

Added subscriber: @LucianoMunoz

#76915 was marked as duplicate of this issue

#76915 was marked as duplicate of this issue
Member

Added subscribers: @dr.sybren, @lichtwerk

Added subscribers: @dr.sybren, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm the behavior.

Will leave up to @dr.sybren to decide if we want to keep (since this is the grey zone between request/limitation/bug).
I'd say X-Mirror is not garuanteed to work across all transform related tools [it would certainly be nice and consistent].

Can confirm the behavior. Will leave up to @dr.sybren to decide if we want to keep (since this is the grey zone between request/limitation/bug). I'd say X-Mirror is not garuanteed to work across all transform related tools [it would certainly be nice and consistent].

Removed subscriber: @dr.sybren

Removed subscriber: @dr.sybren

I'll tag this as a Known Issue, and I've also added it to the Weak Areas wiki page.

I'll tag this as a Known Issue, and I've also added it to the [Weak Areas](https://wiki.blender.org/wiki/Modules/Animation-Rigging/Weak_Areas) wiki page.
Author
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Author
Member

@dr.sybren shouldnt we discuss it a bit before moving it to known issues?, maybe improving it isn't a great deal but it would bring huge benefit workflow wise.

@dr.sybren shouldnt we discuss it a bit before moving it to known issues?, maybe improving it isn't a great deal but it would bring huge benefit workflow wise.

The Known Issues category isn't a death sentence ;-) We can continue discussing, and people can still pick it up to work on it. Sometimes Known Issues are more fun to work on than bug reports, even!

The Known Issues category isn't a death sentence ;-) We can continue discussing, and people can still pick it up to work on it. Sometimes Known Issues are more fun to work on than bug reports, even!

Added subscriber: @rangasai

Added subscriber: @rangasai

Hi all, I'm new to blender development. I have downloaded and built blender on my system and I could successfully reproduce the error as well. I would like to work on this issue as my first one. Will that be fine?
If yes, could you please guide me in the right direction?

Hi all, I'm new to blender development. I have downloaded and built blender on my system and I could successfully reproduce the error as well. I would like to work on this issue as my first one. Will that be fine? If yes, could you please guide me in the right direction?

Added subscriber: @grosgood

Added subscriber: @grosgood

@rangasai
Welcome!
When you've developed a patch that addresses the issue, [create a differential]]. See Contributing Code for guidelines. To get a sense of who your reviewers should be, look up the file(s) your patch will change in [https://developer.blender.org/diffusion/B/|Diffusion and study the colorful left hand column which shows which commit has led to the lines of code on the right. The committers' avatars are a part of that - they constitute potential reviewers. Doesn't hurt to read up on the neighboring commits around the regions you are patching - could be gotchas there that you need to familiarize yourself with. git log -L is also your friend. Have fun!

@rangasai Welcome! When you've developed a patch that addresses the issue, [create a differential]]. See [[https:*wiki.blender.org/wiki/Process/Contributing_Code|Contributing Code]] for guidelines. To get a sense of who your reviewers should be, look up the file(s) your patch will change in [[https://developer.blender.org/diffusion/B/|Diffusion](https:*developer.blender.org/differential/diff/create/) and study the colorful left hand column which shows which commit has led to the lines of code on the right. The committers' avatars are a part of that - they constitute potential reviewers. Doesn't hurt to read up on the neighboring commits around the regions you are patching - could be gotchas there that you need to familiarize yourself with. `git log -L` is also your friend. Have fun!

@grosgood
Thank you for the advice. This is helpful. I will follow them.

@grosgood Thank you for the advice. This is helpful. I will follow them.

Removed subscriber: @grosgood

Removed subscriber: @grosgood

This comment was removed by @rangasai

*This comment was removed by @rangasai*

This issue was referenced by c85317e669

This issue was referenced by c85317e66940fd3c00fa840b1987e704015ebee2

This issue was referenced by f7a5695676

This issue was referenced by f7a5695676dc98eeefd3f8148a24b07426ec6b21
Sybren A. Stüvel changed title from In pose mode: Mirror X doesnt work with certain operations to Pose Mode: Clearing transform doesn't respect Mirror X 2021-01-18 11:57:51 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sybren A. Stüvel self-assigned this 2021-01-18 11:59:43 +01:00

Added subscribers: @ErickNyanduKabongo, @mano-wii

Added subscribers: @ErickNyanduKabongo, @mano-wii
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83657
No description provided.